test/fixtures/complex/invalid/basic_8.mf2
.foo{:hello}{:bar}
{{}}
=== spans ===
                    .foo{:hello}{:bar}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                          ^^^^ 1:0-1:4
Pattern                                     1:2-1:2
Text                                        1:2-1:2
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is unrecognized. (at @0..18)
  .foo{:hello}{:bar}↵{{}}
  ^^^^^^^^^^^^^^^^^^
=== formatted ===
(cannot format due to fatal errors)
=== ast ===
ComplexMessage {
    span: @0..23,
    declarations: [],
    body: QuotedPattern {
        span: @19..23,
        pattern: Pattern {
            parts: [
                Text {
                    start: @21,
                    content: "",
                },
            ],
        },
    },
}